Move profiles dictionary to it's own file and include it

--- a/createOracleUserRP.yml
+++ b/createOracleUserRP.yml
@@ -6,21 +6,24 @@
    odtbsp: "USERS"
    ottbsp: "TEMP"
 #   oprofile: "DEV_PROFILE"
-   profiles:
-     BusinessUser:
-       user_profile: BUSINESS_PROFILE
-     Developer:
-       user_profile: DEV_PROFILE
-     DataArchitect:
-       user_profile: DA_PROFILE
-     DBA:
-       user_profile: DBA_PROFILE
+#   profiles:
+#     BusinessUser:
+#       user_profile: BUSINESS_PROFILE
+#     Developer:
+#       user_profile: DEV_PROFILE
+#     DataArchitect:
+#       user_profile: DA_PROFILE
+#     DBA:
+#       user_profile: DBA_PROFILE
    ostate: "present"
    pii: "NO"
    pci: "NO"
 
   tasks:
    - name: Create the user
+     include_vars:
+       file: common_properties.yml
+       name: profiles
      oracle_user:
        hostname: "{{ ohost }}"
        service_name: "{{ oservice }}"
