Commented out "vars:" line

--- a/common_profiles.yml
+++ b/common_profiles.yml
@@ -1,6 +1,6 @@
 ---
 - name: install common Oracle profiles
-vars:
+# vars:
    profiles:
      BusinessUser:
        user_profile: BUSINESS_PROFILE
