Moved dynamic password generation into the module

--- a/createOracleUserRP.yml
+++ b/createOracleUserRP.yml
@@ -37,7 +37,8 @@
        password: "{{ opw }}"
        port: "{{ oport }}"
        schema: "{{ oschema }}"
-       schema_password: "{{ oschemapwd }}"
+       #schema_password: "{{ oschemapwd }}"
+       schema_password: "{{ lookup('password','/dev/null length=16') }}"
        default_tablespace: "{{ odtbsp }}"
        default_temp_tablespace: "{{ ottbsp }}"
        profile: "{{ profiles[oprofile]['user_profile'] }}"
