--- a/createOracleUserRP.yml
+++ b/createOracleUserRP.yml
@@ -22,7 +22,7 @@
   tasks:
    - name: Create the new Oracle user password
      set_fact:
-       oschemapwd: "{{ new_passwd }}"
+       oschemapwd: "\"{{ new_passwd }}\""
      no_log: true
 
    - name: Debug block
@@ -37,8 +37,8 @@
        password: "{{ opw }}"
        port: "{{ oport }}"
        schema: "{{ oschema }}"
-       #schema_password: "{{ oschemapwd }}"
-       schema_password: "{{ lookup('password','/dev/null length=16') }}"
+       schema_password: "{{ oschemapwd }}"
+       #schema_password: "{{ lookup('password','/dev/null length=16') }}"
        default_tablespace: "{{ odtbsp }}"
        default_temp_tablespace: "{{ ottbsp }}"
        profile: "{{ profiles[oprofile]['user_profile'] }}"
